<resources>
    <string name="app_name">memoryCollection</string>
    <string name="start_text">tap</string>
    <string name="screen1">画面１</string>
    <string name="screen2">画面2test</string>
    <string name="savon">実行</string>
    <string name="start_button_description">スタートボタン</string>

    <string name="museum">美術館</string>
    <string name="returnToScreen2">戻る</string>
    <string name="welcomeToMuseum">美術館へようこそ！</string>

    <string name="left_arrow">左</string>
    <string name="right_arrow">右</string>
    <string name="sortbydate">Sort by Date</string>
    <string name="sortbycategory">Sort by Category</string>
    <string name="selectCategory">カテゴリー選択</string>

</resources>