<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/startLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/right_background0"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen2"
        android:textSize="24sp"
        android:fontFamily="@font/nikumaru"/>

    <Button
        android:id="@+id/museumButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/museum"/>

    <ImageView
        android:id="@+id/arrow_left"
        android:layout_width="50dp"
        android:layout_height="80dp"
        android:layout_gravity="start|center_vertical"
        android:layout_marginStart="@dimen/arrow_margin"
        android:src="@drawable/arrow_left"
        android:contentDescription="@string/savon" />

</FrameLayout>