<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MuseumActivity">

    <!-- 背景と歓迎メッセージ -->
    <RelativeLayout
        android:id="@+id/welcomeScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <TextView
            android:id="@+id/museumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/welcomeToMuseum"
            android:textSize="24sp"
            android:textColor="#000000" />
    </RelativeLayout>

    <!-- メインコンテンツ -->
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- 戻るボタン -->
    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="16dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/back"
        android:scaleType="fitCenter"/>

    <!-- 撮影日時順でソート -->
    <Button
        android:id="@+id/sortButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="13sp"
        android:text="@string/sortbydate"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sortCategoryButton"/>

    <!-- カテゴリー順でソート -->
    <Button
        android:id="@+id/sortCategoryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="13sp"
        android:text="@string/sortbycategory"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <!-- カテゴリーを選択する -->
    <Button
        android:id="@+id/selectCategoryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectCategory"
        android:textSize="13dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"
        android:layout_marginEnd="16dp" />

    <!-- 消去ボタン -->
    <ImageButton
        android:id="@+id/deleteButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:onClick="onDeleteButtonClick"
        app:srcCompat="@drawable/trash"
        android:scaleType="fitCenter"
        app:layout_constraintLeft_toRightOf="@id/backButton"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <!-- ランダムに選択ボタン -->
    <Button
        android:id="@+id/randomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ランダム"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        app:layout_constraintLeft_toRightOf="@id/rotateButton"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- 回転ボタン -->
    <Button
        android:id="@+id/rotateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="90°回転"
        android:textSize="13dp"
        android:layout_margin="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
